<resources>
    <string name="app_name">Курсы Валют</string>
    <string name="rates">Курсы</string>
    <string name="converter">Конвертер</string>
    <string name="settings">Настройки</string>
    <string name="error_load_rate_cbr">Не удалось загрузить курсы валют. \nВозможно у вас отсутствует интернет соединение.\nНажмите на это сообщение, чтобы повторить попытку.</string>
    <string name="repeat_load">Повторить загрузку</string>
    <string name="chosen_currency">Выберите валюту</string>
    <string name="cancel">Отмена</string>
    <string name="currency_rates">Валютные курсы</string>
    <string name="auto_update_currency_rates">Автоматическое обновление валютных курсов</string>
    <string name="auto_update">Автоматическое обновление</string>
    <string name="auto_update_desc">Опция позволяет приложению автоматически получать актуальные валютные курсы</string>
    <string name="update_manually">Обновить вручную</string>
    <string name="update_manually_desc">Нажмите, если хотите получить актуальные валютные курсы прямо сейчас</string>
    <string name="appearance_app">Внешний вид приложения</string>
    <string name="light_theme">Светлая тема</string>
    <string name="light_theme_desc">Включение опции сделает приложение в светлых тонах (временно недоступно)</string>
    <string name="update_currency_rates_done">Получены новые валютные курсы</string>
    <string name="update_currency_rates_error">Неудалось обновить валютные курсы</string>
    <string name="desc_channel">Предназначен для уведомления об обновлении валютных курсов.</string>
</resources>
